Fix runJasmin for linux