@@ -38,7 +38,8 @@ public class SOACT {
         try {
             System.out.println("---------------------------Compilation Successful---------------------------");
             File dir = new File("./codeGenOutput");
-            Process process = Runtime.getRuntime().exec("java -jar jasmin.jar *.j", null, dir);
+//            Process process = Runtime.getRuntime().exec("java -jar jasmin.jar *.j", null, dir);
+            Process process = Runtime.getRuntime().exec(new String[]{ "/usr/bin/sh", "-c", "java -jar jasmin.jar *.j" }, null, dir);
             try {
                 Thread.sleep(500);
             } catch (InterruptedException e) {}
